--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-hello welcome to my website
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> Megan's World </title>
+    <style type="text/css">
+      #paragraph1 {
+          font-size: 50px;
+          font-famil: Helvetica;
+        }
+      #paragraph2 {
+          font-size:100px;
+          font-family: Papyrus;
+          background-color: pink;
+          color: blue;
+          /*Comments*/
+        }
+        .banana {
+          color: yellow;
+        }
+        #paragraph3{
+          font-size: 30px;
+        }
+        #yogurt {
+          color: green;
+          font-family: Comic Sans MS;
+          text-align: center;
+          font-size: 80 px;
+          position: absolute;
+          top: 150px;
+          left: 100px;
+          background-color: blue;
+          border-radius: 40px;
+        }
+    </style>
+    img {
+      border-radius: 10px;
+    }
+  </head>
+
+  <body>
+    <b> bold </br> break </b>
+    <i> italicize </i>
+    <u> underline </u>
+    <hi> heading Big TEXT </h1>
+    <b><u> bolded and underline nesting </u> </b>
+    <hr/> line
+    <a href="http://www.google.com" target ="_blank"> link to another website</a> <br/>
+    <img width="300px" height="300px" src= "https://s-media-cache-ak0.pinimg.com/736x/fd/ba/2d/fdba2dc1929b72c5b68f586495ced869.jpg"/>
+    <ol> <b>This is my list</b>
+        <li>item one can have anything like link or img</li>
+        <li>i like ravioli</li>
+    </ol>
+    <ul> <b>Un ordered list</b>
+        <li>unordered list</li>
+    </ul>
+    <!-- Comment, notes to myself -->
+    <p id="paragraph1" class="banana">
+      great source of potassium
+    </p>
+    <p id="paragraph2" class=grapes>
+      very yummy
+    </p>
+    <p id="paragraph3" class=sushi>
+      i freaking love sushi. i like califronia rolls. i like caterpiller rolls, and spider rolls i dont particularly like raw salmon but i recently tried poki bowls and i might have fallen in love. they are so bomb, but i still love chipotle better.
+    </p>
+    <div id="yogurt">
+      Yogurtland
+    
+    </div>
+    <img src="https://www.yogurt-land.com/img/yogurt-trio.jpg?v=112015"
+  </body>
+</html>
+
