--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </p>
     <div id="yogurt">
       Yogurtland
-    
+    <img width="10px"height="20px"src="https://thesushistation.files.wordpress.com/2015/08/wpid-img_6245.jpg"
     </div>
     <img src="https://www.yogurt-land.com/img/yogurt-trio.jpg?v=112015"
   </body>
