--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Megan's World </title>
+    <title> Megan' World </title>
     <style type="text/css">
       #paragraph1 {
           font-size: 50px;
@@ -70,4 +70,3 @@
     <img src="https://www.yogurt-land.com/img/yogurt-trio.jpg?v=112015"
   </body>
 </html>
-
