--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Megan' World </title>
+    <title> Megan's World </title>
     <style type="text/css">
       #paragraph1 {
           font-size: 50px;
@@ -28,6 +28,7 @@
           position: absolute;
           top: 150px;
           left: 100px;
+          /*Top 3 Lines for positioning images*/
           background-color: blue;
           border-radius: 40px;
         }
@@ -65,8 +66,8 @@
     </p>
     <div id="yogurt">
       Yogurtland
-    <img width="10px"height="20px"src="https://thesushistation.files.wordpress.com/2015/08/wpid-img_6245.jpg"
+    <img width="10px"height="20px"src="https://thesushistation.files.wordpress.com/2015/08/wpid-img_6245.jpg">
     </div>
-    <img src="https://www.yogurt-land.com/img/yogurt-trio.jpg?v=112015"
+    <img src="https://www.yogurt-land.com/img/yogurt-trio.jpg?v=112015">
   </body>
 </html>
